--- a/shelter/style.css
+++ b/shelter/style.css
@@ -12,6 +12,7 @@
 
 :root {
     --color-light-s: #FAFAFA;
+    --color-light-l: #F6F6F6;
     --color-light-xl: #FFFFFF;
     --color-dark-s: #CDCDCD;
     --color-dark-l: #545454;
@@ -41,12 +42,20 @@ body {
     justify-content: space-between;
 }
 
+h1,
 h2,
 h3,
 h4,
 h5 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 400;
+    margin: 0;
+}
+
+h1 {
+    font-size: 32px;
+    color: var(--color-primary);
+    padding-bottom: 5px;
 }
 
 h2 {
@@ -56,15 +65,18 @@ h2 {
 
 h3 {
     font-size: 35px;
+    line-height: 45.5px;
 }
 
 h4 {
-    font-size: 24px;
+    font-size: 20px;
     color: var(--color-dark-l);
+    padding: 30px 0;
 }
 
 h5 {
     font-size: 15px;
+    padding: 20px 0;
 }
 
 p {
@@ -72,12 +84,18 @@ p {
     font-family: 'Arial';
 }
 
+.main-header {
+    background:
+        radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%),
+        url(assets/img/noise_transparent.png);
+}
+
 header p {
     color: var(--color-dark-s);
 }
 
 main h3 {
- color: var(--color-dark-l);
+    color: var(--color-dark-l);
 }
 
 main p {
@@ -89,19 +107,29 @@ main p {
     margin: 0 auto;
 }
 
-
 .header-container {
-background:
-        radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%),
-        url(assets/img/noise_transparent.png);
+
     background-blend-mode: overlay;
     height: 908px;
+    padding: 30px 40px 0px 40px;
+}
+
+.main-container {
+    padding: 80px 40px 100px 40px;
 }
 
 .nav {
     display: flex;
     justify-content: space-between;
-    padding-top: 30px;
+}
+
+.nav-logo {
+    display: block;
+    text-decoration: none;
+}
+
+.nav-logo-text {
+    color: var(--color-light-xl);
 }
 
 .nav-list {
@@ -112,42 +140,67 @@ background:
 }
 
 .nav-link {
-    padding-left: 10px;
+    margin-left: 10px;
     line-height: 24px;
     font-size: 15px;
     text-decoration: none;
     color: #CDCDCD;
     transition: color 0.5s;
+    position: relative;
+    display: inline-block;
+    border-bottom: 3px solid transparent;
+}
+
+.pointed {
+    pointer-events: none;
+}
+
+.pointed {
+    color: var(--color-light-s);
+    border-color: var(--color-primary);
+    transition: .8s;
 }
 
 .nav-link:hover {
     color: var(--color-light-s);
+    transition: .8s;
 }
+
 
 .header-block {
     display: flex;
-    align-items: center;
     padding-top: 90px;
     gap: 42px;
 }
 
+.header-text {
+    width: 460px;
+    padding-top: 163px;
+}
+
+.header-text p {
+    padding-top: 27px;
+    padding-bottom: 27px;
+}
+
 .header-img {
-    background: url(assets/svg/start-screen-puppy.svg) left left no-repeat;
-    width: 100%;  
-    height: 100%;
+    background: url(assets/img/start-sreen-puppy.png) center center no-repeat;
+    width: 698px;
+    height: 728px;
 }
 
 .button {
     -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-          border: 0;
-  border-radius: 100px;
-font-family: 'Georgia';
-font-size: 17px;
-color: var(--color-dark-3xl);
-padding: 15px 45px;
-transition: background-color 0.5s;
+    -moz-appearance: none;
+    appearance: none;
+    border: 0;
+    border-radius: 100px;
+    font-family: 'Georgia';
+    font-size: 17px;
+    color: var(--color-dark-3xl);
+    padding: 15px 45px;
+    transition: background-color 0.5s;
+    cursor: pointer;
 }
 
 .button-orange {
@@ -166,12 +219,12 @@ transition: background-color 0.5s;
 .about-img {
     width: 50%;
     background: url(assets/img/about-pets.png) center center no-repeat;
-    
+
 }
 
 .about-text {
     width: 50%;
-    
+
 }
 
 .about-text h3 {
@@ -179,26 +232,19 @@ transition: background-color 0.5s;
 }
 
 .about-text p {
-max-width: 430px;
+    max-width: 430px;
 }
 
 .break-line {
     display: block;
 }
 
-.main-container {
-    padding: 80px 40px 100px 40px;
-}
-
 .pets-container {
-    background-color: #F6F6F6;
+    background-color: var(--color-light-l);
 }
 
 .pets {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 60px;
+    text-align: center;
 }
 
 .slider {
@@ -206,12 +252,25 @@ max-width: 430px;
     justify-content: space-between;
     align-items: center;
     gap: 53px;
+    margin: 60px 0;
 }
 
 .slider-button {
-    border: 2px solid #F1CDB3;
-    padding: 16.5px 19px 17px 19px;
+    border: 2px solid var(--color-primary);
+    /*padding: 16.5px 19px 17px 19px; */
+    padding: 17.5px 20.5px 19.5px 17.5px;
     border-radius: 100px;
+    vertical-align: middle;
+}
+
+.slider-button-main {
+    padding: 14.55px 17px 14.95px 17px;
+}
+
+.slider-button:hover {
+    background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light);
+    transition: 0.8s;
 }
 
 .carts {
@@ -221,17 +280,33 @@ max-width: 430px;
 }
 
 .cart {
-background-color: var(--color-light-s);
+    background-color: var(--color-light-s);
+    transition: 0.8s;
+
+}
+
+.cart:hover {
+    cursor: pointer;
+    box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+    ;
+}
+
+.cart-img {
+    height: 270px;
 }
 
 .white-button {
     background-color: white;
     border: 2px solid #F1CDB3;
+    margin-bottom: 30px;
 }
 
 .white-button:hover {
     background-color: var(--color-primary-light);
+    border-color: var(--color-primary-light);
+    ;
 }
+
 .white-button-text {
     font-size: 17px;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -240,20 +315,26 @@ background-color: var(--color-light-s);
 
 .help-container {
     background-color: var(--color-light-xl);
+    text-align: center;
 }
 
 .icons {
     display: block;
-   
+    padding: 60px 87px 0 87px;
 }
 
 .row {
     display: flex;
     gap: 120px;
+    justify-content: space-between;
 }
 
 .second-row {
-padding: 55px 84px 0px 84px;
+    padding: 55px 84px 0px 84px;
+}
+
+.help h4 {
+    padding-bottom: 0px;
 }
 
 .icon {
@@ -273,6 +354,10 @@ padding: 55px 84px 0px 84px;
     width: 505px;
 }
 
+.fill-background {
+    background-color: var(--color-light-l);
+}
+
 .donation-text {
     width: 380px;
 }
@@ -284,25 +369,144 @@ padding: 55px 84px 0px 84px;
     padding: 10px 15px;
     align-items: center;
     gap: 15px;
+
+}
+
+.telephone a {
+    text-decoration: none;
+    color: var(--color-dark-l);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
 }
 
 .coursive {
     color: var(--color-dark-m);
     font-size: 12px;
+    padding-top: 8px;
+    line-height: 18px;
 }
 
-.footer-container {
+#donation {
+    background-color: var(--color-light-l);
+}
+
+footer {
     background:
         radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%),
         url(assets/img/noise_transparent.png);
+}
+
+.footer-container {
     background-blend-mode: overlay;
-    height: 908px;
     display: flex;
     gap: 160px;
+    justify-content: space-between;
 }
 
 .contacts {
     display: inline-flex;
     gap: 20px;
     align-items: center;
+}
+
+.footer-img {
+    background: url(assets/img/footer-puppy.png) bottom no-repeat;
+    width: 300px;
+    margin-right: 40px;
+}
+
+.footer-question {
+    width: 318px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+}
+
+.footer-visit {
+    width: 302px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.footer-link {
+    text-decoration: none;
+    color: #F1CDB3;
+}
+
+.white-text {
+    color: #FFFFFF;
+    padding-bottom: 20px;
+}
+
+.orange-text {
+    color: #F1CDB3;
+    padding: 20px 0;
+}
+
+.gallery-carts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+
+.main-pets {
+    background-color: var(--color-light-l);
+    padding: 80px 40px 100px 40px;
+}
+
+.pets-h1 {
+    color: var(--color-dark-l);
+}
+
+.nav-logo-text-pets {
+    color: var(--color-dark-3xl);
+}
+
+.nav-link-pets {
+    color: var(--color-dark-l);
+}
+
+.nav-link-pets:hover,
+.pointed-dark {
+    color: var(--color-dark-3xl)
+}
+
+.header-pets {
+    padding: 30px 0;
+}
+
+.slider-button-small {
+    padding: 18.5px 11.5px 18.5px 11.5px;
+}
+
+.page-number {
+    background-color: var(--color-primary);
+    padding: 15px 19.5px;
+    border-radius: 100px;
+
+}
+
+.inactive {
+    border-color: var(--color-dark-s);
+}
+
+.all-cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 45px;
+}
+
+.h3-center {
+    text-align: center;
+}
+
+.gallery-carts .cart {
+    text-align: center;
+}
+
+.pets-nav {
+    padding-left: 40px;
+    padding-right: 40px;
 }
