--- a/randome-game/style.css
+++ b/randome-game/style.css
@@ -1,7 +1,38 @@
+* {
+    box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+}
+
 body, html {
     height: 100vh;
     margin: 0;
     display: flex;
     justify-content: center; 
-    align-items: center;     
+    align-items: center;   
+    flex-direction: column;  
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+footer {
+    height: fit-content;
+    background-color: hsl(30, 100%, 50%);
+    width: 100%;
+}
+
+.logo-section {
+    display: flex;
+justify-content: end;
+gap: 0.5rem;
+align-items: center;
+padding: 0.5rem 2%;
+}
+
+footer img {
+    height: 2rem;
+}
+
+footer img:hover {
+    filter: invert(0.2); 
+    transition: 0.9ms;
 }
